# astral-sh-uv-python

./: Dockerfile  README.md  docker-compose.yml  extensions.cfg  pyproject.toml  server.py
.devcontainer/: devcontainer.json
