[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.5.2",
    "python-decouple>=3.8",
    "uvicorn[standard]>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "ruff>=0.6.9",
]
[tool.ruff]
# maximum line length
line-length = 80

[tool.ruff.lint]


